--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,45 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/welcome_gradient"
+    android:orientation="vertical"
     tools:context=".ui.activities.WelcomeActivity">
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="100dp"
         app:srcCompat="@drawable/ic_android_black_24dp" />
 
     <android.support.v7.widget.AppCompatTextView
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Welcome to BookFair"
-        android:layout_marginTop="150dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="150dp"
+        android:text="@string/welcome_to_bookfair"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/icons" />
 
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:text="Connecting you with the books you need."
-        android:textColor="@color/icons"
-        android:layout_gravity="center_horizontal"
+        android:text="@string/connecting_you_with_the_books_you_need"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        />
+        android:textColor="@color/icons" />
 
-    <android.support.v7.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/launch_login"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        />
+        android:layout_marginTop="40dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        fancy:fb_defaultColor="@color/icons"
+        fancy:fb_radius="7dp"
+        fancy:fb_text="LOGIN"
+        fancy:fb_textColor="@color/primary" />
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/signup"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        fancy:fb_defaultColor="@color/primary"
+        fancy:fb_radius="7dp"
+        fancy:fb_text="SIGN UP"
+        fancy:fb_textColor="@color/icons" />
 
 </LinearLayout>
