--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -51,7 +51,7 @@
         fancy:fb_textColor="@color/primary" />
 
     <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/signup"
+        android:id="@+id/launch_signup"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
