--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primary">#9C27B0</color>
-    <color name="primary_dark">#7B1FA2</color>
+    <color name="primary">#9b59b6</color>
+    <color name="primary_dark">#8e44ad</color>
     <color name="primary_light">#E1BEE7</color>
-    <color name="accent">#FF5722</color>
+    <color name="accent">#2ecc71</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
 
+    <color name="facebook_blue">#2196F3</color>
 </resources>
