--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primary">#9b59b6</color>
-    <color name="primary_dark">#8e44ad</color>
+    <color name="primary">#9C27B0</color>
+    <color name="primary_dark">#7B1FA2</color>
     <color name="primary_light">#E1BEE7</color>
     <color name="accent">#2ecc71</color>
     <color name="primary_text">#212121</color>
