--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/default_margin"
         android:orientation="vertical">
 
         <android.support.v7.widget.AppCompatImageView
@@ -19,14 +19,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/default_margin_top"
             app:srcCompat="@drawable/ic_android_purple_24dp" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email_or_username_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/default_margin_top"
             android:textColorHint="@color/secondary_text"
             app:errorEnabled="true">
 
@@ -66,12 +66,12 @@
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/login_btn"
             android:layout_width="250dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_gravity="center_horizontal"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp"
+            android:paddingBottom="@dimen/default_padding"
+            android:paddingLeft="@dimen/default_padding"
+            android:paddingRight="@dimen/default_padding"
+            android:paddingTop="@dimen/default_padding"
             fancy:fb_defaultColor="@color/accent"
             fancy:fb_radius="7dp"
             fancy:fb_text="Sign Up"
@@ -83,7 +83,7 @@
             android:text="Forgot Password ?"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/default_margin_top"
             android:layout_gravity="center_horizontal"/>
 
         <LinearLayout
@@ -91,14 +91,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/default_margin_top"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/default_margin_top"
                 android:layout_weight=".5"
                 android:background="@color/divider" />
 
@@ -113,7 +113,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/default_margin_top"
                 android:layout_weight=".5"
                 android:background="@color/divider" />
         </LinearLayout>
@@ -121,13 +121,13 @@
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/facebook_login_btn"
             android:layout_width="250dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp"
+            android:layout_marginTop="@dimen/default_margin_top"
+            android:paddingBottom="@dimen/default_padding"
+            android:paddingLeft="@dimen/default_padding"
+            android:paddingRight="@dimen/default_padding"
+            android:paddingTop="@dimen/default_padding"
             fancy:fb_defaultColor="@color/facebook_blue"
             fancy:fb_radius="7dp"
             fancy:fb_text="Log in with Facebook"
