--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_padding"
+        android:layout_margin="@dimen/default_margin"
         android:orientation="vertical">
 
         <android.support.v7.widget.AppCompatImageView
@@ -35,7 +35,7 @@
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/facebook_login_btn"
             android:layout_width="250dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/default_margin_top"
             android:paddingBottom="@dimen/default_padding"
@@ -160,7 +160,7 @@
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/signup_btn"
             android:layout_width="250dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_gravity="center_horizontal"
             android:paddingBottom="@dimen/default_padding"
             android:paddingLeft="@dimen/default_padding"
