--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="default_margin">20dp</dimen>
+    <dimen name="default_margin">30dp</dimen>
     <dimen name="default_padding">10dp</dimen>
     <dimen name="default_margin_top">10dp</dimen>
+    <dimen name="signup_login_btn_width">250</dimen>
+    <dimen name="signup_login_btn_height">40</dimen>
+
 </resources>
