--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forgot Password ?"
+            android:text="Forgot Password? Let us help you."
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
             android:layout_marginTop="@dimen/default_margin_top"
