--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             app:srcCompat="@drawable/ic_android_purple_24dp" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/email_or_username_layout"
+            android:id="@+id/login_email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_top"
@@ -31,11 +31,11 @@
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/email_or_username_editText"
+                android:id="@+id/login_email_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/divider"
-                android:hint="@string/email_or_username"
+                android:hint="@string/email"
                 android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -43,7 +43,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/password_layout"
+            android:id="@+id/login_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/secondary_text"
@@ -52,7 +52,7 @@
             app:passwordToggleTint="@color/accent">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/password_editText"
+                android:id="@+id/login_password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/divider"
