--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -138,7 +138,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/password_layout"
+            android:id="@+id/login_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/secondary_text"
@@ -147,7 +147,7 @@
             app:passwordToggleTint="@color/accent">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/password_editText"
+                android:id="@+id/login_password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/divider"
