added "submit" button, and preferences to check if the user is logged in or not and maintain that state

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="divider">#BDBDBD</color>
 
     <color name="facebook_blue">#2196F3</color>
+    <color name="color_button_failed">#e74c3c</color>
+
 </resources>
