--- a/app/src/main/res/layout/activity_main_.xml
+++ b/app/src/main/res/layout/activity_main_.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.MainActivity">
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_home"
+        style="@style/Widget.Design.FloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_add_black_24dp"/>
+
         <com.ashokvarma.bottomnavigation.BottomNavigationBar
             android:id="@+id/bottom_navigation_bar"
             android:layout_width="match_parent"
