--- a/app/src/main/res/layout/activity_main_.xml
+++ b/app/src/main/res/layout/activity_main_.xml
@@ -7,45 +7,39 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.MainActivity">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/nested_scrollview">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/nested_linear"
-            android:orientation="vertical">
-
         <FrameLayout
             android:id="@+id/frame_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-          <bookfair.android.ui.views.ViewPagerNoSwipe
-            android:id="@+id/viewpager_no_swipe"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            <bookfair.android.ui.views.ViewPagerNoSwipe
+                android:id="@+id/viewpager_no_swipe"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-
-        <com.ashokvarma.bottomnavigation.BottomNavigationBar
-            android:id="@+id/bottom_navigation_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom" />
-
+        </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_home"
         style="@style/Widget.Design.FloatingActionButton"
+        app:srcCompat="@drawable/ic_add_black_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_add_black_24dp"/>
+        android:layout_marginBottom="70dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:layout_marginTop="10dp" />
+
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
+        android:id="@+id/bottom_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
