--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:id="@+id/login_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/icons"
     tools:context=".ui.activities.LoginActivity"
     android:fitsSystemWindows="true">
 
