--- a/app/src/main/res/layout/toolbar_editprofile.xml
+++ b/app/src/main/res/layout/toolbar_editprofile.xml
@@ -21,7 +21,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="10dp"
                     android:layout_centerVertical="true"
-                    android:id="@+id/back_arrow"
+                    android:id="@+id/back_arrow_editprofile"
                     app:srcCompat="@drawable/ic_back_arrow"/>
 
                 <TextView
@@ -30,7 +30,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="5dp"
                     android:text="@string/edit_profile"
-                    android:layout_toEndOf="@id/back_arrow"
+                    android:layout_toEndOf="@id/back_arrow_editprofile"
                     android:textColor="@color/primary_text"
                     android:textSize="20sp" />
 
